@@ -3,3 +3,5 @@ mvn clean compile -Djetty.port=8083 jetty:run
 
 #JUnit Test
 clean compile -Dspring.profiles.active=test-derby -Dtest=____class ที่ you จะ Test____,_____,____ test
+
+-XX:MaxPermSize=512M
